[🐛 Fix] Add margin around box to avoid overlapping boxes

--- a/sass/components/_card.sass
+++ b/sass/components/_card.sass
@@ -4,3 +4,4 @@
   border: 3px solid var(--card-border-color)
   border-radius: 12px
   max-width: 700px
+  margin: 0 10px
